--- a/public/wp-content/themes/blackrock/scss/style.scss
+++ b/public/wp-content/themes/blackrock/scss/style.scss
@@ -15,6 +15,7 @@
 @import "modules/_card_carousel.scss";
 @import "modules/_copy_two_images.scss";
 @import "modules/_floors.scss";
+@import "modules/_contact.scss";
 @import "modules/_home_hero.scss";
 @import "modules/_home_section.scss";
 @import "modules/_image_carousel.scss";
