--- a/public/wp-content/themes/blackrock/scss/style.scss
+++ b/public/wp-content/themes/blackrock/scss/style.scss
@@ -8,7 +8,6 @@
 @import "layout/_navigation.scss";
 @import "layout/_header.scss";
 
-
 @import "elements/_buttons.scss";
 @import "elements/_modal.scss";
 
@@ -21,6 +20,7 @@
 @import "modules/_image_carousel.scss";
 @import "modules/_keep_exploring.scss";
 @import "modules/_map.scss";
+@import "modules/_modal_popup.scss";
 @import "modules/_one_col_copy_image.scss";
 @import "modules/_title_multiple_columns.scss";
 @import "modules/_two_col_copy_image.scss";
